feat: Add email
