# docs/swagger.json
@@ -7,9 +7,6 @@
         "/user/": {
             "get": {
                 "description": "Get user information by user ID and token",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -19,13 +16,11 @@
                 "summary": "Get user information",
                 "parameters": [
                     {
+                        "type": "integer",
                         "description": "Request body with user ID and token",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/user.UserReq"
-                        }
+                        "name": "id",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -33,6 +28,40 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/user.UserResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/add_email": {
+            "post": {
+                "description": "Add an email to a user account by user ID and token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Add email",
+                "parameters": [
+                    {
+                        "description": "Request body with user ID, token, and email",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.AddEmailReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user.AddEmailResp"
                         }
                     }
                 }
@@ -108,6 +137,31 @@
         }
     },
     "definitions": {
+        "user.AddEmailReq": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "user.AddEmailResp": {
+            "type": "object",
+            "properties": {
+                "status_code": {
+                    "type": "integer"
+                },
+                "status_msg": {
+                    "type": "string"
+                }
+            }
+        },
         "user.UserLoginReq": {
             "type": "object",
             "properties": {
@@ -156,17 +210,6 @@
                 "status_msg": {
                     "type": "string"
                 },
-                "token": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "user.UserReq": {
-            "type": "object",
-            "properties": {
                 "token": {
                     "type": "string"
                 },
